--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Baidu Tongji -->
-    {% if site.ba_track_id %}
+<!--     {% if site.ba_track_id %}
     <script>
         // dynamic User by Hux
         var _baId = '{{ site.ba_track_id }}';
@@ -48,5 +48,5 @@
         s.parentNode.insertBefore(hm, s);
         })();
     </script>
-    {% endif %}
+    {% endif %} -->
 </head>
