--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
     <!-- Web App Manifest | 作用是缓存, 反正挺牛皮的, 一开始还不知道 -->
     <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+    <!-- Favicon favicon.ico-->
+    <link rel="shortcut icon" href="{{ site.baseurl }}/img/head.jpg">
 
     <!-- Safari Webpage Icon    by-BY | 这个一开始也不知道, 看了百度, 大概了解, 反正有用留着就行 -->
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/apple-touch-icon.png">
